_rename/node-red/node-red.deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: node-red
  name: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      # restartPolicy: Always
      containers:
        - name: node-red
          image: nodered/node-red
          ports:
            - containerPort: 1880
