_rename/node-red/node-red.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: node-red
  name: node-red
spec:
  ports:
    - port: 80
      targetPort: 1880
      protocol: TCP
      name: http
  selector:
    app: node-red
