_rename/node-red/node-red.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: node-red
  name: node-red
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt

  labels:
    external: node-red.jeanmgirard.com
spec:
  tls:
  - hosts:
    - node-red.jeanmgirard.com
    secretName: node-red-jeanmgirard-com
  rules:
    - host: node-red.jeanmgirard.com
      http:
        paths:
          - path: /
            backend:
              serviceName: node-red
              servicePort: 80
